--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -17,8 +17,8 @@
   <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,500,600,700,800,900' rel='stylesheet' type='text/css'>
 
 
-  <link rel="stylesheet" href="/css/bootstrap.min.css"> 
-  <link rel="stylesheet" href="/css/joyride.css"> 
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/joyride.css">
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/jscrollpane.css">
   <link rel="stylesheet" href="/css/fontello/css/fontello.css">
@@ -66,8 +66,8 @@
   <!-- Overlay, loader arrows & admin panel -->
   <div id="adminPanelWrap"></div>
   <div class="progress_bar"></div>
-  <div class="progress_bar--landing"></div>
   <div class="loaderWrap"></div>
+  <div class="progress_bar--landing"></div>
   <div class="m-loaderWrap"></div>
   <div class="curtain"></div>
   <div class="modal-curtain"></div>
@@ -92,7 +92,7 @@
       <!-- landing hero -->
       <div class="landing-hero">
         <div class="hero-logo">
-          <img src="/img/app/logo.png" width="50" alt="Logo meefore soirées">
+          <img src="/img/logo_white_on_pink_skew_fav.png" width="40" alt="Logo meefore soirées">
         </div>
         <div class="hero-languages">
           <span data-code="fr" class="no-cb pick-lang hero-lang active">FR</span>
@@ -128,7 +128,7 @@
     <!-- landing keypoints -->
     <div class="landing-keypoints">
       <div data-lid="lp_key_title" class="keypoint-message">L'indispensable mix d'un before réussi</div>
-      <img class="keypoint-splitter" src="/img/app/splitter.png" alt="A nice splitter">
+      <img class="keypoint-splitter" src="/img/splitter.png" alt="A nice splitter">
       <div class="keypoint-wrap keypoint-1">
         <div class="keypoint-img"><i class="icon icon-keypoint icon-group"></i></div>
         <div data-lid="lp_key_friends_title" class="keypoint-head">Les amis...</div>
@@ -183,8 +183,8 @@
   <header id="#mainHeader" class="lg-header none">
     <div id="headerContent">
     <div class="preview-type beta">bêta</div>
-      <img id="logo" src="/img/app/logo-light.png" width="48"></img>
-      <ul id="menuWrap" class="no-select">
+      <img id="logo" src="/img/logomeefore.png" width="48"></img>
+      <ul id="menuWrap" class="">
         <li id="profile" data-hash="me" class="menu-item menu-item-active icon icon-user" data-linkedcontent="#profileWrap"><span class="underlay"></span></li>
         <li id="events" data-hash="events" class="menu-item icon icon-glass" data-linkedcontent="#eventsWrap"><span class="underlay"></span></li>
         <li id="search" class="menu-item icon icon-search"><span class="underlay"></span>
@@ -349,7 +349,7 @@
         <div class="row-events-filters-group">
           <i class="icon icon-filters-group icon-location"></i>
           <div data-lid="e_filters_location" class="event-filter-label">Changer d'endroit : </div>
-          <input id="moveAround" type="text" placeholder="Paris, Madrid..." >
+          <input id="moveAround" type="text" placeholder="Paris, Londres..." >
         </div>
         <div class="row-events-filters-divider"></div>
         <div class="row-events-filters-group filters-create-meefore">
@@ -367,7 +367,7 @@
               <!-- Dynamically loaded -->
         </div>
         <div class="row-events-map">
-          <!-- Dynamically loadedd-->
+          <!-- Dynamically loaded -->
         </div>
       </div>
 
