--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -11,7 +11,7 @@
 }
 
 .modal-container-body {
-   background: url('/img/app/crossword.png');
+   background: url('/img/crossword.png');
    height: 100%;
    padding: 25px;
    text-align: center;
