--- a/public/css/style.css
+++ b/public/css/style.css
@@ -231,7 +231,7 @@ body header.lg-header,
 body header.sm-header {
    width: 100%;
    height: 42px;
-   background-image: url('/img/texture-png2.png');
+   background-image: url('/img/app/darkpattern.png');
    box-shadow: 0 0 5px rgb(37, 37, 37);
    position: fixed;
    top: 0;
@@ -247,8 +247,8 @@ body > header > img {
 }
 
 #logo {
-   position: absolute;
-   top: -4px;
+   position: absolute; 
+   top: 5px;
    left: 50px;
    display: inline-block;
 }
@@ -285,7 +285,6 @@ body > header > h5 {
 
 #mainWrap {
    width: 100%;
-   /* background: url('/img/crossword.png'); */
    margin-top: 0;
    min-height: 100vh;
    box-sizing: border-box;
