--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -67,6 +67,7 @@
   <div id="adminPanelWrap"></div>
   <div class="progress_bar"></div>
   <div class="loaderWrap"></div>
+  <div class="progress_bar--landing"></div>
   <div class="m-loaderWrap"></div>
   <div class="curtain"></div>
   <div class="modal-curtain"></div>
@@ -91,7 +92,7 @@
       <!-- landing hero -->
       <div class="landing-hero">
         <div class="hero-logo">
-          <img src="/img/logo_white_on_pink_skew_fav.png" width="40" alt="Logo meefore soirées">
+          <img src="/img/app/logo.png" width="50" alt="Logo meefore soirées">
         </div>
         <div class="hero-languages">
           <span data-code="fr" class="no-cb pick-lang hero-lang active">FR</span>
@@ -127,7 +128,7 @@
     <!-- landing keypoints -->
     <div class="landing-keypoints">
       <div data-lid="lp_key_title" class="keypoint-message">L'indispensable mix d'un before réussi</div>
-      <img class="keypoint-splitter" src="/img/splitter.png" alt="A nice splitter">
+      <img class="keypoint-splitter" src="/img/app/splitter.png" alt="A nice splitter">
       <div class="keypoint-wrap keypoint-1">
         <div class="keypoint-img"><i class="icon icon-keypoint icon-group"></i></div>
         <div data-lid="lp_key_friends_title" class="keypoint-head">Les amis...</div>
@@ -182,7 +183,7 @@
   <header id="#mainHeader" class="lg-header none">
     <div id="headerContent">
     <div class="preview-type beta">bêta</div>
-      <img id="logo" src="/img/logomeefore.png" width="48"></img>
+      <img id="logo" src="/img/app/logo-light.png" width="35"></img>
       <ul id="menuWrap" class="">
         <li id="profile" data-hash="me" class="menu-item menu-item-active icon icon-user" data-linkedcontent="#profileWrap"><span class="underlay"></span></li>
         <li id="events" data-hash="events" class="menu-item icon icon-glass" data-linkedcontent="#eventsWrap"><span class="underlay"></span></li>
@@ -347,7 +348,7 @@
       <div class="row row-events row-events-filters">
         <div class="row-events-filters-group">
           <i class="icon icon-filters-group icon-location"></i>
-          <div class="event-filter-label">Changer d'endroit : </div>
+          <div data-lid="e_filters_location" class="event-filter-label">Changer d'endroit : </div>
           <input id="moveAround" type="text" placeholder="Paris, Londres..." >
         </div>
         <div class="row-events-filters-divider"></div>
@@ -479,8 +480,8 @@
   </div>
   
   <script id="app_ids"> 
-     window.facebook_app_id = "1638108873141834";
-     window.pusher_app_id   = "f9e4bf4e8f1e0342ca27";
+    window.facebook_app_id = "1638108873141834";
+    window.pusher_app_id   = "f9e4bf4e8f1e0342ca27";
   </script>
 
   <script src="//js.pusher.com/3.0/pusher.min.js"></script>  
