new img and better transition lp

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1366,7 +1366,7 @@ input[type="radio"] + span {
 	height: 3px;
 	background:#e94f6a;
 	width: 0;
-	transition: all ease-in-out 1.3s;
+	transition: all ease-out 2.3s;
 	z-index: 1000000;
 }
 
