--- a/public/css/events.css
+++ b/public/css/events.css
@@ -544,7 +544,7 @@ transition: all ease-out .4s;
   width: 100%;
   margin: 0 auto;
 }
-.row-events-accepted-inview.active .event-accepted-chatwraps {
+.row-events-accepted-inview.active .event-accepted-chat-wrap {
   display: block;
 }
 
@@ -556,11 +556,11 @@ transition: all ease-out .4s;
   height: 83%;
 }
 .event-accepted-chat-messages {
-    height: 180px;
     background: #FFFFFF;
     /* overflow: overlay; */
     position: relative;
     outline: none;
+    height: 80%;
 }
 .event-accepted-users {
 
@@ -1035,13 +1035,11 @@ opacity: .85;}
  
 .event-accepted-chatwraps {
   height: 89%;
-}
-
-.event-accepted-chat-wrap {
-  height: 100%;
   display: flex;
   flex-direction: column;
 }
+
+.event-accepted-chat-wrap {height: 100%;}
 
 .event-accepted-chat-wrap:not(:first-of-type) {
   
