--- a/public/css/media.css
+++ b/public/css/media.css
@@ -1,382 +1,140 @@
-@media screen and ( min-width: 1000px ) {
+@media screen and ( min-width: 1024px ) {
    .m-loaderWrap {
       display: none!important;
    }
 }
 
-@media screen and ( max-width: 1000px ) {
+@media screen and ( max-width: 1024px ) {
+	 
+	 .centered {
+	 	width: 100%;
+	 	padding: 0 20px;
+	 }
+	 .row-profile .picture {
+	 	display: inline-block;
+	 	margin: 23px;
+	 }
+	 .row-input {
+	 	width: 100%;
+	 	height: auto;
+	 }
+
+	 .hero-logo {
+	 	top: 5px;
+	 	left:10px;
+	 }
+	 .hero-logo img {
+	 	width: 35px;
+	 }
+
+	 .hero-languages {
+	 	top: 5px;
+	 	right: 5px;
+	 	font-size: 10px;
+
+	 }
+     .landing-kenburns {
+         height: auto;
+     }
+
+     .lp-arrow {
+     	display: none;
+     }
+
+     .bx-wrapper .bx-controls-direction a {
+     	display: none;
+     }
+
+     .hero-header {
+		font-size: 40px;
+		}
+
+     .hero-subheader {
+     	font-size: 15px;
+     	margin-top: 5px;
+     	line-height: 25px;
+     	padding: 0 50px;
+     }
+
+
+     #search {
+     	display: none!important;
+     }
+
+     #logo {
+     	left: 0;
+     }
+
+     .beta {
+     	left: 25px!important;
+     	font-size: 8px;
+     	top: 21px!important;
+     }
+
+     #languages {
+     	display: none;
+     }
+
+     #menuWrap {
+     	margin-left: 65px;
+     }
+	.row-events-filters-group {
+		display: none;
+	}
+	#settings {
+		float: none;
+	}
+	#facebook_connect, .landing-map-button {
+		width: 240px;
+		padding: 15px 20px;
+		font-size: 14px;
+		
+	}
+	#facebook_connect {
+		margin-top: 30px;
+	}
+
+	.keypoint-message {
+		font-size: 22px;
+		width: 70%;
+		margin: 30px auto;
+	}
+
+	.row-select-description {
+		display: none;
+	}
+}
+
+@media screen and ( max-width: 500px ) {
 	
-   .earl-num {
-      float: none;
-      display: none;
-   }
+	 #thumbWrap {
+     	display: none!important;
+     }
+
+	#facebook_connect {
+		width: 150px;
+		padding: 7px 10px;
+		font-size: 10px;
+		margin-top: 12px;
+	}
+
+	.hero-subheader {
+		font-size: 10px;
+		line-height: 17px
+	}
+
+	.moving-arrow {
+		display: none;
+	}
+
+	.landing-places-wrap {
+		font-size: 10px;
+		bottom: 10px;
+		left: 10px;
+	}
+	.landing-places-wrap .icon {
+		font-size: 12px;
+		top: 1px;
+	}
 
-   .earl-title {
-      font-size: 13px!important;
-   }
-
-   #earlyAdoPointList {
-      text-align: center;
-   }
-
-   .earl-row {
-      margin-left: 20px;
-      margin-right: 20px;
-   }
-
-   #thumbWrap {
-      display: none!important;
-   }
-
-   .hint:before, .hint:after, [data-hint]:before, [data-hint]:after {
-      display: none;
-   }
-
-   #contentWrap input,
-  label,
-  .input-row-wrap {
-      width: 100%!important;
-      text-align: center!important;
-      padding: 0;
-   }
-
-   label {
-      margin-top: 11px!important;
-      padding: 0;
-   }
-
-   input,
-	textarea, {
-      padding: ;
-    	margin: 0;
-      margin-bottom: 20px!important;
-   }
-
-  /* Propriétés générales */
-   .centered {
-      width: 100%!important;
-   }
-
-   .themeBtnMain {
-      margin: 20px auto!important;
-      display: block;
-      float: none;
-      margin-bottom: 40px!important;
-   }
-
-   .toast {
-      width: 100%!important;
-   }
-
-   .loaderWrap {
-      display: none!important;
-   }
-
-   #searchUsers {
-      border-top: none;
-   }
-/* ========================== settingsWrap ======================== */
-
-   #settingsWrap .input-row-wrap {
-      text-align: center;
-   }
-
-   #contactWrap form {
-      text-align: center;
-      margin: 30px 0;
-      overflow: hidden;
-   }
-
-   .formWrap,
-    #settingsInputsWrap {
-      padding: 0 40px;
-   }
-
-   input {
-      margin: 0 auto;
-      margin-top: 10px;
-   }
-/* ========================== ProfileWrap ======================== */
-
-   #pictureWrap {
-      display: block;
-   }
-
-   .fieldsWrap {
-      display: block;
-      margin: 40px auto;
-      padding: 0 40px;
-   }
-
-   .input-row-wrap label {
-    /* margin-bottom: 10px!important; */
-      ;
-   }
-
-   .input-row-wrap #name {
-      margin-bottom: 0px;
-      margin-top: 0;
-      padding-top: 2px;
-      text-align: center;
-   }
-
-   .input-row-wrap #age {
-      margin: 0;
-      padding: 0;
-      width: 45px!important;
-      margin-top: 4px;
-   }
-
-   #searchBar i {
-      top: 17px;
-   }
-
-   #searchBar input {
-      width: 80%!important;
-   }
-
-   #createEventInputsWrap {
-      padding: 0 100px;
-      text-align: center;
-   }
-
-   #contentWrap #eventHour,
-  #contentWrap #eventMinut,
-  #contentWrap #eventLocation,
-  #contentWrap #eventMaxGuest {
-      width: 40px!important;
-   }
-
-   #contentWrap .chatInputWrap input {
-      margin: 0;
-   }
-
-   #contentWrap .chatInputWrap input[type="submit"] {
-      width: 20px!important;
-   }
-
-   #contentWrap .chatInputWrap input[type="text"] {
-   }
-
-   #manageEventsWrap .a-picture {
-      display: block;
-      margin: 6px auto;
-   }
-}
-
-@media screen and ( max-width: 580px ) {
-	
-   body {
-      cursor: pointer;
-   }
-
-   .toastMsg {
-      font-size: 12.5px;
-   }
-
-   .toast-icon {
-      display: none;
-   }
-
-   .toast {
-      height: 22px;
-      padding-top: 13px;
-   }
-    
-/* ========================== menuWrap ======================== */
-   .menu-item.right {
-      float: none;
-   }
-
-   .col {
-      float: none!important;
-   }
-
-   #menuWrap {
-      margin-left: 0;
-      text-align: center;
-      font-size: 14px;
-      min-width: 230px;
-   }
-
-   #menuWrap .underlay {
-      height: 5px;
-      top: 5px;
-      left: 0px;
-      width: 100%;
-   }
-
-   #menuWrap .menu-item {
-      width: 13%;
-      padding-left: 0;
-      padding-right: 0;
-   }
-
-   body header.m {
-      display: none!important;
-   }
-
-   body header {
-   }
-
-   body h2 {
-      font-size: 1.5em;
-      margin-bottom: 30px;
-   }
-
-   #createEventWrap h2 {
-      padding: 0 10px;
-   }
-    /* EventsWrap */
-   .action {
-      display: block;
-      margin: 15px 0;
-      font-size: .7em;
-   }
-
-   #contactBody {
-      width: auto!important;
-   }
-       
-/* ========================== SearchWrap ======================== */
-
-   #searchUsersWrap,
-    #searchBar {
-      width: auto;
-   }
-
-    
-/* ========================== EventsWrap ======================== */
-	
-   #noEvents {
-      padding: 0 20px;
-   }
-    
-
-/* ========================== createWrap ======================== */
-
-   #createEventInputsWrap {
-      padding: 0 40px;
-   }
-
-   #createEventInputsWrap label {
-      margin-bottom: 10px!important;
-      display: block;
-   }
-
-   #logo {
-      display: none;
-   }
-}
-
-@media screen and ( max-width: 320px ) {
-}
-
-/* Ugly hacks */
-
-#landingWrap > .container > .row {
-   overflow: hidden;
-}
-
-#profileWrap .row {
-   overflow: hidden!important;
-}
-
-.col {
-   width: 33.333%;
-   float: left;
-   display: inline;
-}
-
-@media screen and (max-width:330px) {
-
-   .eventItemWrap {
-      display: block;
-      margin-left: 0;
-      margin-right: 0;
-      width: auto;
-   }
-
-   .e-desc {
-      display: block;
-   }
-
-   .e-guests {
-      width: auto;
-   }
-
-   .e-hour {
-      font-size: 30px;
-      width: 143px;
-   }
-
-   .guestsWrap {
-      width: 100px;
-   }
-
-   .guestsWrap > span {
-      font-size: 12px;
-   }
-
-   .tag,.loc,.drink,.mood {
-      font-size: .60em;
-   }
-
-   .e-location {
-      position: relative;
-      top: -17px;
-      right: 45px;
-      margin-bottom: 5px;
-   }
-
-   .e-location span {
-      background: white;
-      border: 1px solid #ccc;
-      padding: 5px;
-   }
-
-   .u-item .u-body {
-      width: auto;
-   }
-
-   .u-item button {
-      positon: absolute;
-      right: 5px;
-   }
-}
-
-
-/* BOOTSTRAP VERY MIN */
-
-.container {
-   padding-right: 15px;
-   padding-left: 15px;
-   margin-right: auto;
-   margin-left: auto;
-}
-
-@media (min-width: 768px) {
-   .container {
-      width: 750px;
-   }
-}
-
-@media (min-width: 992px) {
-   .container {
-      width: 970px;
-   }
-}
-
-@media (min-width: 1200px) {
-   .container {
-      width: 1000px;
-   }
-}
-
-#landingWrap .row {
-   text-align: center;
-}
-
-.row {
-   overflow: hidden;
 }
