--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -12,9 +12,7 @@
    font-weight: bolder;
    font-size: 13px;
    color: #484848;
-   border-bottom: 1px solid;
-   box-shadow: 0 0 2px black;
-   margin-bottom: 3px;
+   border-bottom: 2px solid #8E8686;
 }
 
 .row-title-text {
